--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -40,7 +40,7 @@
       .point:first-of-type, .point:last-of-type { display: block; }
       .point:nth-of-type(2n) { display: block }
     }
-    .axis-x .tick:nth-of-type(2n) { display: block}
+    .axis-x .tick { display: block}
   }
 
   @container (max-width: 50rem) {
