--- a/src/packages/respvis-core/css/chart/toolbar/dialog.css
+++ b/src/packages/respvis-core/css/chart/toolbar/dialog.css
@@ -25,6 +25,12 @@
         translate: 0 0;
       }
       > .item + .item, > .item + button  { margin-top: 0.5em }
+
+      .item.item--double-range-filter {
+        .collapsable-wrapper, .collapsable, .double-range-slider {
+          width: 100%;
+        }
+      }
     }
 
     &.dialog--center {
@@ -47,9 +53,9 @@
 
     &.dialog--filter {
       width: min-content;
-      .collapsable-wrapper, .collapsable, label { width: min-content }
+      .collapsable-wrapper, .collapsable, label { width: min-content; }
       .collapsable-opener {
-        span:nth-of-type(2) { white-space: nowrap }
+        span:nth-of-type(2) { white-space: nowrap; }
       }
     }
 
@@ -80,6 +86,10 @@
       }
       input[type='range'] {
         width: 4rem;
+      }
+      &.item--double-range-filter input[type='range'] {
+        width: calc(100% - var(--slider-height) / 2);
+        margin: 0;
       }
     }
   }
