--- a/src/packages/respvis-core/css/chart/window-rv.css
+++ b/src/packages/respvis-core/css/chart/window-rv.css
@@ -1,8 +1,10 @@
 .window-rv {
   display: grid;
   position: relative;
-  grid-template: 1fr / 1fr;
-  grid-template-areas: 'chart';
+  grid-template: auto 1fr / 1fr;
+  grid-template-areas:
+    'toolbar'
+    'layouter';
   width: 100%;
   height: 100%;
   font-family: sans-serif;
