--- a/src/packages/respvis-core/css/chart/toolbar/dialog.css
+++ b/src/packages/respvis-core/css/chart/toolbar/dialog.css
@@ -81,7 +81,7 @@
         input { margin: 0; }
       }
       input[type='number'] {
-        width: 4ch;
+        /*flex-basis: 4ch;*/
       }
       input[type='range'] {
         width: 4rem;
