Requested Changes - Fuse npm and gulp tasks with task descriptions - Parcoord: Swich Default Arrow Position - Parcoord: Add margin between subtitle and arrow

--- a/src/examples/parcoords/parcoord/parcoord.css
+++ b/src/examples/parcoords/parcoord/parcoord.css
@@ -6,6 +6,7 @@
   .chart-parcoord {
     --chart-padding-left: 4rem;
     --chart-padding-right: 4rem;
+    --chart-padding-top: 4rem;
   }
   @container (width < 50rem) {
     .chart {
