--- a/src/packages/respvis-parcoord/css/chart-parcoord.css
+++ b/src/packages/respvis-parcoord/css/chart-parcoord.css
@@ -3,11 +3,40 @@
   --chart-padding-top: 3rem;
   --chart-padding-right: 3rem;
   --chart-padding-bottom: 3rem;
+
+  --axis-inverter-width: 0.7rem;
+  --axis-inverter-height: calc(var(--axis-inverter-width) * 19 / 12);
+
   .axis.axis-sequence {
     position: relative;
 
-    &.axis-inverted .axis-inverter .rotation-group {
-      transform: rotate(180deg);
+    .axis-inverter {
+      height: var(--axis-inverter-height);
+      width: var(--axis-inverter-width);
+      svg {
+        transform-origin: calc(var(--axis-inverter-width) / 2) calc(var(--axis-inverter-height) / 2);
+        transition: transform 500ms;
+      }
+      .svg {
+        height: 100%;
+        width: 100%;
+      }
+      &.axis-inverter-horizontal {
+        svg {
+          transform: translate(calc(-1.3 * var(--axis-inverter-height)), calc(-1 * var(--axis-inverter-height) / 2))
+          rotate(90deg);
+        }
+      }
+    }
+
+    &.axis-inverted {
+      .axis-inverter svg {
+        transform: rotate(180deg);
+      }
+      .axis-inverter.axis-inverter-horizontal svg {
+        transform: translate(calc(-1.3 * var(--axis-inverter-height)), calc(-1 * var(--axis-inverter-height) / 2))
+        rotate(-90deg);
+      }
     }
 
     div.title-wrapper {
@@ -15,20 +44,17 @@
       display: flex;
       bottom: 100%;
       translate: -50% -30%;
-      width: min-content;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-    }
-
-    .axis-inverter, .rotation-group {
-      transform-origin: center;
-      transform-box: fill-box;
-    }
-
-    .rotation-group {
-      transition: transform 500ms;
-      transform: rotate(0deg);
+      .title {
+        flex-basis: 100%;
+      }
+      .subtitle {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
     }
   }
 }
