Finish Radius Improvements Add Bubble Scale in Legend

--- a/src/packages/respvis-core/css/chart/legend.css
+++ b/src/packages/respvis-core/css/chart/legend.css
@@ -6,6 +6,8 @@
   align-self: start;
   cursor: default;
   gap: 0.25rem;
+  --max-radius: 0;
+  --min-radius: 0;
   .title {
     font-size: var(--font-size-legend-title);
     margin: 0 0.5em;
@@ -15,8 +17,9 @@
     flex-direction: column;
     gap: 0.4rem;
   }
-  &:has(.legend__color-scale) {
-    padding: 1rem;
+  &:has(.legend__color-scale, .legend__radius-scale) {
+    padding-right: max(1rem, var(--max-radius, 0));
+    padding-left: max(1rem, var(--min-radius, 0));
   }
   .items + .legend__color-scale {
     margin-top: 1rem;
@@ -32,6 +35,31 @@
       grid-area: color-scale;
       height: calc(1.6 * var(--font-size-axis-title));
       width: 100%;
+    }
+    .axis {
+      grid-area: axis;
+    }
+  }
+  .legend__radius-scale {
+    display: grid;
+    grid-template: auto auto / auto;
+    grid-template-areas:
+      'elements'
+      'axis';
+    width: 100%;
+    .elements {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      grid-area: elements;
+      height: calc(1rem + 2 * var(--max-radius));
+      width: 100%;
+      min-width: calc(calc(1rem + 2 * var(--max-radius)) + 2 * var(--min-radius));
+      .point {
+        --fit-height: true;
+        --fit-width: true;
+        fill: none;
+      }
     }
     .axis {
       grid-area: axis;
