--- a/src/examples/scatterplots/scatterplot/scatterplot.css
+++ b/src/examples/scatterplots/scatterplot/scatterplot.css
@@ -29,14 +29,15 @@
       'header'
       'padding-wrapper'
       'legend';
+        --chart-padding-right: 1rem;
       }
 
       .legend {
         width: 100%;
-        margin-bottom: 2rem;
-        flex-direction: row;
+        margin-top: 1rem;
+        /*flex-direction: row;*/
         justify-content: center;
-        .title { display: none; }
+        & > .title { display: none; }
 
         .items {
           display: grid;
