Fix problem with rgba not applicable in SVG1.1 Use zoom identity transform in cartesian zoom Fix Margin default 0 instead of undefined

--- a/src/packages/respvis-core/css/chart/element/graphic/bar.css
+++ b/src/packages/respvis-core/css/chart/element/graphic/bar.css
@@ -1,6 +1,7 @@
 .element.bar {
   stroke-width: 1;
   stroke: var(--color-bar-stroke);
+  stroke-opacity: var(--bar-stroke-opacity);
 }
 
 .highlight .bar,
