--- a/src/storybook/stories/util/arguments/single-line-chart-progression/tooltips-and-labels.css
+++ b/src/storybook/stories/util/arguments/single-line-chart-progression/tooltips-and-labels.css
@@ -1,6 +1,9 @@
 #chart-window {
   --chart-padding-top: 1rem;
+  --chart-padding-right: 1rem;
   container-type: inline-size;
+
+  /*--font-size-title: clamp(0.8rem, 0.8rem + 2vw, 1.5rem);*/
 
   .draw-area {
     .label {
