Refactor categories Change Legend Default Styles Refactor Breakpoints Change Tick orientation args to Interpolation RespVals

--- a/src/packages/respvis-core/css/chart/chart.css
+++ b/src/packages/respvis-core/css/chart/chart.css
@@ -24,6 +24,10 @@
   .padding-container--bottom {
     height: var(--chart-padding-bottom, 0);
   }
+
+  .title.empty, .subtitle.empty {
+    display: none;
+  }
 }
 
 @media (hover: none) {
