--- a/src/packages/respvis-core/css/chart/legend.css
+++ b/src/packages/respvis-core/css/chart/legend.css
@@ -5,24 +5,48 @@
   align-items: center;
   align-self: start;
   cursor: default;
-  gap: 0.25rem;
+  gap: 1rem;
   --max-radius: 0px;
   --min-radius: 0px;
+  .legend__categories {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    .items {
+      display: flex;
+      flex-direction: column;
+      gap: 0.4rem;
+    }
+    .legend-item {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 0.6em;
+      font-size: var(--font-size-legend-label);
+      --fit-height: false;
+      &:active {
+        font-weight: bold;
+      }
+      .symbol {
+        stroke: #000;
+        stroke-width: 1px;
+        width: 1em;
+        height: 1em;
+      }
+    }
+
+    .highlight.legend-item .symbol {
+      filter: brightness(var(--highlight-brightness));
+    }
+  }
   .title {
     font-size: var(--font-size-legend-title);
     margin: 0 0.5em;
   }
-  .items {
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-  }
   &:has(.legend__color-scale, .legend__radius-scale) {
-    padding-right: max(1rem, var(--max-radius, 0px));
-    padding-left: max(1rem, var(--min-radius, 0px));
-  }
-  .items + .legend__color-scale {
-    margin-top: 1rem;
+    /*padding-right: max(1rem, var(--max-radius, 0px));*/
+    /*padding-left: max(1rem, var(--min-radius, 0px));*/
+    padding-inline: 1rem;
   }
   .legend__color-scale {
     display: grid;
@@ -67,24 +91,4 @@
   }
 }
 
-.legend-item {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 0.6em;
-  font-size: var(--font-size-legend-label);
-  --fit-height: false;
-  &:active {
-    font-weight: bold;
-  }
-  .symbol {
-    stroke: #000;
-    stroke-width: 1px;
-    width: 1em;
-    height: 1em;
-  }
-}
 
-.highlight.legend-item .symbol {
-  filter: brightness(var(--highlight-brightness));
-}
