--- a/src/examples/scatterplots/scatterplot-style-container-queries/sold-cars-germany/sold-cars-germany.css
+++ b/src/examples/scatterplots/scatterplot-style-container-queries/sold-cars-germany/sold-cars-germany.css
@@ -7,6 +7,7 @@
   --chart-padding-top: 0.5rem;
   --chart-padding-bottom: 1rem;
   --chart-padding-left: 1rem;
+  --chart-padding-right: 1rem;
 /*//Legend To Bottom*/
 @container style(--layout-width: 0) or style(--layout-width: 1) or style(--layout-width: 2) {
   .chart {
