Refactor Responsive Properties

--- a/src/packages/respvis-point/css/scatterplot.css
+++ b/src/packages/respvis-point/css/scatterplot.css
@@ -5,7 +5,7 @@
   .series-label[layout-strategy-vertical="bottom"] text { dominant-baseline: hanging; }
 
   --chart-padding-right: var(--max-radius, 0px);
-  /*--chart-padding-left: var(--max-radius, 0px);*/
+  --chart-padding-left: var(--max-radius, 0px);
   --chart-padding-top: var(--max-radius, 0px);
   --chart-padding-bottom: var(--max-radius, 0px);
 }
