--- a/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.css
+++ b/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.css
@@ -2,8 +2,16 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  .chart {
+    grid-template: auto 1fr auto/1fr;
+    grid-template-areas: "header" "padding-wrapper" "legend";
+    --chart-padding-right: 3rem;
+  }
   .legend {
     align-items: flex-start;
+    margin-top: 2rem;
+    padding-inline: 3rem;
+    .legend__categories { display: none; }
     .title {
       margin: 0;
     }
