--- a/src/examples/parcoords/parcoord/parcoord.css
+++ b/src/examples/parcoords/parcoord/parcoord.css
@@ -3,11 +3,22 @@
   height: 75vh;
   min-height: 25rem;
   container-type: inline-size;
+
+  .window-rv {
+    --transition-time-ms: 750;
+  }
+
   .chart-parcoord {
     --chart-padding-left: 4rem;
     --chart-padding-right: 4rem;
     --chart-padding-top: 4rem;
+
+    path.line.animated.highlight[data-key~="s-0-c-0"] {
+      /*due to flickering for many elements*/
+      filter: unset;
+    }
   }
+
   @container (width < 50rem) {
     .chart {
       grid-template: auto 1fr auto / 1fr;
@@ -22,7 +33,14 @@
       margin-bottom: 2rem;
       flex-direction: row;
       justify-content: center;
-      .title { display: none; }
+
+      .title {
+        display: none;
+      }
+
+      .legend__categories {
+        width: 100%;
+      }
 
       .items {
         display: grid;
@@ -39,7 +57,9 @@
   @container (width < 40rem) {
     .axis.axis-sequence {
       &[data-key="a-0"] .tick, &[data-key="a-1"] .tick {
-        &:nth-of-type(2n) { display: none; }
+        &:nth-of-type(2n) {
+          display: none;
+        }
       }
     }
   }
