--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -10,6 +10,16 @@ footer {
   border-top: 0.063rem solid #DADCE0;
 }
 
+@media (min-width: 40rem) {
+  .chart {
+    --chart-padding-right: 1rem;
+
+    .legend .title {
+      margin: 0;
+    }
+  }
+}
+
 @media (max-width: 40rem) {
   .chart {
     grid-template: auto 1fr auto / 1fr;
@@ -17,19 +27,21 @@ footer {
       'header'
       'padding-wrapper'
       'legend';
-  }
-  .padding-wrapper {
-    padding-right: 1rem;
-  }
 
-  .legend-item {
-    width: auto;
-  }
-
-  .legend .items {
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
+    .legend {
+      .legend__categories {
+        width: 100%;
+        .title {
+          margin: 0 auto;
+        }
+        .items {
+          flex-direction: row;
+          justify-content: space-evenly;
+          flex-wrap: nowrap;
+          width: 100%;
+        }
+      }
+    }
   }
 
   .axis-y .tick:nth-of-type(2n) {
