--- a/src/examples/linecharts/linechart/linechart.css
+++ b/src/examples/linecharts/linechart/linechart.css
@@ -41,6 +41,9 @@
   }
 
   @container (width >= 45rem) {
+    .window-rv {
+      --chart-padding-right: 1.5rem;
+    }
     .ticks .tick:nth-of-type(2n + 1) {
       display: block;
     }
