--- a/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.css
+++ b/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.css
@@ -1,7 +1,8 @@
 .scatterplot-reusable {
   width: 90%;
   margin: 2rem auto;
-  height: 75vh;
+  /*height: 75vh;*/
+  height: 30vh;
   min-height: 25rem;
 }
 
