--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.css
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.css
@@ -2,49 +2,58 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  container-type: inline-size;
+  .chart {
+    --chart-padding-right: 1rem;
+  }
+
+  @container (width >= 40rem) {
+    .chart {
+      .legend .title {
+        margin: 0;
+      }
+    }
+  }
+
+  @container (width < 40rem) {
+    .chart {
+      grid-template: auto 1fr auto / 1fr;
+      grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+
+      .legend {
+        margin-top: 1rem;
+        .legend__categories {
+          width: 100%;
+          .title {
+            margin: 0 auto;
+          }
+          .items {
+            flex-direction: row;
+            justify-content: space-evenly;
+            flex-wrap: nowrap;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    .axis-y .tick:nth-of-type(2n) {
+      display: none;
+    }
+  }
+
+  @container (width < 30rem) {
+    .chart {
+      --chart-padding-right: 1.5rem;
+    }
+  }
 }
 
 footer {
   padding: 0 1rem 1rem;
   margin-top: 1rem;
   border-top: 0.063rem solid #DADCE0;
-}
-
-@media (min-width: 40rem) {
-  .chart {
-    --chart-padding-right: 1rem;
-
-    .legend .title {
-      margin: 0;
-    }
-  }
-}
-
-@media (max-width: 40rem) {
-  .chart {
-    grid-template: auto 1fr auto / 1fr;
-    grid-template-areas:
-      'header'
-      'padding-wrapper'
-      'legend';
-
-    .legend {
-      .legend__categories {
-        width: 100%;
-        .title {
-          margin: 0 auto;
-        }
-        .items {
-          flex-direction: row;
-          justify-content: space-evenly;
-          flex-wrap: nowrap;
-          width: 100%;
-        }
-      }
-    }
-  }
-
-  .axis-y .tick:nth-of-type(2n) {
-    display: none;
-  }
 }
