--- a/src/packages/respvis-bar/css/index.css
+++ b/src/packages/respvis-bar/css/index.css
@@ -7,7 +7,10 @@
   }
   &[data-flipped="false"] {
     .series-label[layout-strategy="positive"] text { dominant-baseline: auto; }
+    .series-label[layout-strategy="negative"][data-inverted] text { dominant-baseline: auto; }
     .series-label[layout-strategy="negative"] text { dominant-baseline: hanging; }
+    .series-label[layout-strategy="positive"][data-inverted] text { dominant-baseline: hanging; }
+
     .series-label[layout-strategy="dynamic"] text[data-polarity="positive"] { dominant-baseline: auto; }
     .series-label[layout-strategy="dynamic"] text[data-polarity="negative"] { dominant-baseline: hanging; }
   }
