--- a/src/examples/barcharts/barchart/barchart.css
+++ b/src/examples/barcharts/barchart/barchart.css
@@ -18,6 +18,7 @@
   @container (width >= 30rem) {
     .window-rv {
       --chart-padding-top: 1rem;
+      --chart-padding-right: 1px;
     }
   }
 }
