--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -27,13 +27,13 @@
 
   @container (width >= 45rem) {
     .legend {
-      margin-right: 2rem;
+      margin-right: 0.3rem;
     }
   }
 
   @container (width < 45rem) {
     .window-rv {
-      --chart-padding-right: 2rem;
+      --chart-padding-right: calc(3rem - clamp(0rem, 8vw, 3rem));
     }
     .chart {
       grid-template: auto 1fr auto / 1fr;
