--- a/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.css
+++ b/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.css
@@ -2,15 +2,16 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  container-type: inline-size;
   .chart {
     grid-template: auto 1fr auto/1fr;
     grid-template-areas: "header" "padding-wrapper" "legend";
-    --chart-padding-right: 3rem;
+    --chart-padding-right: 0.8rem;
   }
   .legend {
     align-items: flex-start;
     margin-top: 2rem;
-    padding-inline: 3rem;
+    padding-inline: 1rem;
     .legend__categories { display: none; }
     .title {
       margin: 0;
