--- a/src/examples/parcoords/parcoord/parcoord.css
+++ b/src/examples/parcoords/parcoord/parcoord.css
@@ -19,8 +19,16 @@
     }
   }
 
+  @container (width >= 50rem) {
+    .chart-parcoord {
+      --chart-padding-bottom: 0.8rem;
+    }
+  }
+
   @container (width < 50rem) {
-    .chart {
+    .chart-parcoord {
+      --chart-padding-right: 2rem;
+    /*calc(1rem - clamp(0rem, 8vw, 1rem));*/
       grid-template: auto 1fr auto / 1fr;
       grid-template-areas:
       'header'
@@ -30,7 +38,6 @@
 
     .legend {
       width: 100%;
-      margin-bottom: 2rem;
       flex-direction: row;
       justify-content: center;
 
@@ -55,6 +62,9 @@
     }
   }
   @container (width < 40rem) {
+    .chart-parcoord {
+      --chart-padding-right: 2rem;
+    }
     .axis.axis-sequence {
       &[data-key="a-0"] .tick, &[data-key="a-1"] .tick {
         &:nth-of-type(2n) {
