--- a/src/examples/scatterplots/scatterplot/scatterplot.css
+++ b/src/examples/scatterplots/scatterplot/scatterplot.css
@@ -5,37 +5,16 @@
 
   .window-rv {
     container-type: inline-size;
-    --chart-padding-bottom: 1rem;
-    --chart-padding-left: 1rem;
-
-    .legend {
-      align-items: flex-start;
-
-      .title {
-        margin: 0;
-      }
-    }
-
-    @container (min-width: 60rem) {
-      .tick {
-        display: block;
-      }
-    }
 
     @container (width < 40rem) {
       .chart {
         grid-template: auto 1fr auto / 1fr;
-        grid-template-areas:
-      'header'
-      'padding-wrapper'
-      'legend';
+        grid-template-areas: 'header' 'padding-wrapper' 'legend';
         --chart-padding-right: 1rem;
       }
 
       .legend {
-        width: 100%;
         margin-top: 1rem;
-        /*flex-direction: row;*/
         justify-content: center;
         & > .title { display: none; }
 
@@ -47,18 +26,6 @@
           width: 100%;
           justify-content: space-between;
           grid-template-columns: auto auto auto;
-
-          .legend-item {
-            justify-content: flex-start;
-          }
-        }
-      }
-
-      .axis-x .tick {
-        display: none;
-
-        &:nth-of-type(2n), &:first-of-type, &:last-of-type {
-          display: block;
         }
       }
 
