--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -10,27 +10,18 @@
     [data-style=categorical-2] { --color-categorical-2: #539322; }
   }
   .legend {
-    .title {
-      margin-left: 0.6rem;
-    }
+    margin-top: 1.5rem;
+    margin-right: 0.3rem;
+    .title { margin-left: 0.6rem; }
     .items {
       .legend-item {
         width: 5rem;
         height: 1.5rem;
         gap: 0.5rem;
         justify-content: flex-end;
-        &.highlight {
-          font-size: calc(1.4 * var(--font-size-legend-label));
-        }
+        &.highlight { font-size: calc(1.4 * var(--font-size-legend-label)); }
       }
       align-items: flex-end;
-    }
-    margin-top: 1.5rem;
-  }
-
-  @container (width >= 45rem) {
-    .legend {
-      margin-right: 0.3rem;
     }
   }
 
@@ -40,33 +31,18 @@
     }
     .chart {
       grid-template: auto 1fr auto / 1fr;
-      grid-template-areas:
-      'header'
-      'padding-wrapper'
-      'legend';
-      .legend {
-        margin-top: 0;
-        padding: 1rem;
-        .items {
-          align-items: center;
-        }
-      }
+      grid-template-areas: 'header' 'padding-wrapper' 'legend';
     }
-
-    .legend .title {
-      display: none;
+    .legend {
+      margin-top: 0.5rem;
+      margin-right: 0;
     }
-
+    .legend .title { display: none; }
     .legend .items {
       width: 100%;
       flex-direction: row;
       justify-content: space-evenly;
     }
-
-    .axis-y .tick:nth-of-type(2n) {
-      display: none;
-    }
+    .axis-y .tick:nth-of-type(2n) { display: none; }
   }
 }
-
-
