Double Range Slider Range Calculation Fix Double Chevrons: Change Direction Unify Colors: Simple Tooltip, Inputs, Labels Add Own Versions of checkboxes/radio buttons, Design similar to Chrome inputs

--- a/src/packages/respvis-core/css/chart/toolbar/dialog.css
+++ b/src/packages/respvis-core/css/chart/toolbar/dialog.css
@@ -97,6 +97,7 @@
       min-width: 1.2em;
       height: auto;
       transition: rotate 600ms ease-in-out, transform 80ms ease-in-out;
+      stroke: black;
     }
     &:has(+ .expanded) svg {
       rotate: 180deg;
