--- a/src/packages/respvis-core/css/chart/toolbar/control-element.css
+++ b/src/packages/respvis-core/css/chart/toolbar/control-element.css
@@ -1,12 +1,12 @@
 .window-rv {
   fieldset {
-    border: 2px solid var(--control-elements-color);
+    border: 2px solid var(--white-darken-15);
   }
 
   .button--icon {
     display: flex;
     align-items: center;
-    border: 2px solid var(--control-elements-color);
+    border: 2px solid var(--white-darken-15);
     padding: 0.25em 0.5em;
     height: 2rem;
     gap: 0.5rem;
@@ -25,8 +25,8 @@
     /*Taken and modified from: https://www.w3schools.com/css/css_tooltip.asp*/
     position: absolute;
     visibility: hidden;
-    background-color: #555;
-    color: #fff;
+    border: 1px solid var(--control-elements-chart-color3);
+    background: white;
     text-align: center;
     padding: 0.3rem 0.5rem;
     border-radius: 0.375rem;
@@ -58,6 +58,100 @@
     &:active .tooltip-simple {
       visibility: visible;
       opacity: 1;
+    }
+  }
+}
+
+.window-rv {
+  .toolbar {
+    /* Simulates Chrome behaviour */
+    input[type="checkbox"] {
+      appearance: none; /* Remove default styling */
+      width: 0.8125rem;
+      height: 0.8125rem;
+      border: 1px solid var(--checkbox-color);
+      border-radius: 2px;
+      position: relative;
+      cursor: pointer;
+      &:active {
+        filter: brightness(115%);
+      }
+      &:checked {
+        background-color: var(--control-input-color);
+        border-color: var(--control-input-color);
+        &:hover {
+          border-color: color-mix(in srgb, var(--control-input-color) 85%, black);
+          background-color: color-mix(in srgb, var(--control-input-color) 85%, black);
+        }
+        &::before {
+          /*display: flex;*/
+          /*align-items: center;*/
+          /*justify-content: center;*/
+          content: '';
+          background-image: url("data:image/svg+xml,%3c%3fxml version='1.0' encoding='UTF-8'%3f%3e %3c!-- Created with Inkscape (http://www.inkscape.org/) --%3e %3csvg width='9px' height='8px' version='1.1' viewBox='0 0 25.949 24.27' xmlns='http://www.w3.org/2000/svg'%3e %3cg transform='translate(-54.509 -131.13)' fill='none' stroke='white' stroke-width='4.965'%3e %3cpath d='m58.007 145.64 4.9507 5.9017 15.017-17.924' stroke-linecap='round'/%3e %3cpath d='m58.007 145.64 0.4136 0.49027 3.5148 4.2024' stroke-linecap='square'/%3e %3c/g%3e %3c/svg%3e");
+          background-repeat: no-repeat;
+          background-size: contain;
+          width: 0.5345900288421938rem;
+          height: 0.5rem;
+          color: white;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          font-weight: bold;
+          translate: -50% -50%;
+        }
+      }
+
+      &:not(:checked):hover {
+        border: 1px solid var(--control-elements-chart-color4);
+      }
+    }
+  }
+}
+
+.window-rv .toolbar input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 0.875rem;
+  height: 0.875rem;
+  border-radius: 50%;
+  border: 1px solid var(--radio-color);
+  background-color: white;
+  position: relative;
+
+  &:not(:checked):hover {
+    border: 1px solid var(--control-elements-chart-color4);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
+    filter: brightness(115%);
+  }
+
+  &:checked {
+    border-color: var(--control-input-color);
+
+    &:hover {
+      filter: brightness(85%);
+    }
+
+    &:active {
+      filter: brightness(115%);
+    }
+
+    &::before {
+      --inset: 2px;
+      content: '';
+      width: calc(100% - 2 * var(--inset));
+      height: calc(100% - 2 * var(--inset));
+      position: absolute;
+      border-radius: 50%;
+      background-color: var(--control-input-color);
+      inset: var(--inset);
     }
   }
 }
