--- a/src/packages/respvis-core/css/chart/toolbar/double-range-slider.css
+++ b/src/packages/respvis-core/css/chart/toolbar/double-range-slider.css
@@ -37,8 +37,9 @@
       width: 1rem;
       height: 1rem;
       border-radius: 50%;
+      border: none;
       /*background-color: #e8e8ec;*/
-      background-color: #e95420;
+      background-color: var(--control-input-color);
       -webkit-appearance: none;
       appearance: none;
     }
@@ -48,8 +49,9 @@
       width: 1rem;
       height: 1rem;
       border-radius: 50%;
+      border: none;
       /*background-color: #e8e8ec;*/
-      background-color: #e95420;
+      background-color: var(--control-input-color);
       -webkit-appearance: none;
       appearance: none;
     }
@@ -59,8 +61,9 @@
       width: 1rem;
       height: 1rem;
       border-radius: 50%;
+      border: none;
       /*background-color: #e8e8ec;*/
-      background-color: #e95420;
+      background-color: var(--control-input-color);
       -webkit-appearance: none;
       appearance: none;
     }
@@ -83,7 +86,7 @@
     translate: 0 -50%;
     left: calc(var(--slider-height) / 2 + var(--range-start) * (100% - var(--slider-height)));
     right: calc(var(--slider-height) / 2 + (1.0 - var(--range-end)) * (100% - var(--slider-height)));
-    background-color: #e95420;
+    background-color: var(--control-input-color);
     z-index: 3;
   }
 }
