Implement requested changes

--- a/src/packages/respvis-core/css/chart/toolbar/dialog.css
+++ b/src/packages/respvis-core/css/chart/toolbar/dialog.css
@@ -77,6 +77,7 @@
       }
       input[type='number'] {
         /*flex-basis: 4ch;*/
+        padding: 0.25em;
       }
       input[type='range'] {
         width: 4rem;
