--- a/src/packages/respvis-core/css/text.css
+++ b/src/packages/respvis-core/css/text.css
@@ -1,11 +1,16 @@
 /*TODO: Scope to respvis window*/
-.text {
-  --fit-width: true;
-  --fit-height: true;
-}
 
-text {
-  dominant-baseline: central;
-  text-anchor: start;
-  stroke: none;
+.window-rv, #tooltip-rv {
+  font-size: var(--font-size-base);
+
+  .text {
+    --fit-width: true;
+    --fit-height: true;
+  }
+
+  text {
+    dominant-baseline: central;
+    text-anchor: start;
+    stroke: none;
+  }
 }
