--- a/src/packages/respvis-core/css/chart/element/label.css
+++ b/src/packages/respvis-core/css/chart/element/label.css
@@ -1,24 +1,26 @@
-.series-label {
-  .label {
-    font-size: var(--font-size-element-label);
-    pointer-events: none;
+.window-rv, #toolvip-rv {
+  .series-label {
+    .label {
+      font-size: var(--font-size-element-label);
+      pointer-events: none;
 
-    &.animated {
-      font-size: 0;
-      opacity: 0;
-      transition: opacity 250ms, font-size 250ms;
-      &.entering, &.enter-done {
-        opacity: 1;
-        font-size: var(--font-size-element-label);
+      &.animated {
+        font-size: 0;
+        opacity: 0;
+        transition: opacity 250ms, font-size 250ms;
+        &.entering, &.enter-done {
+          opacity: 1;
+          font-size: var(--font-size-element-label);
+        }
+      }
+
+      &.highlight {
+        font-size: calc(1.3 * var(--font-size-element-label));
       }
     }
 
-    &.highlight {
-      font-size: calc(1.3 * var(--font-size-element-label));
-    }
-  }
-
-  text {
-    text-anchor: middle;
+    /*text {*/
+    /*  text-anchor: middle;*/
+    /*}*/
   }
 }
