--- a/src/packages/respvis-line/css/chart-line.css
+++ b/src/packages/respvis-line/css/chart-line.css
@@ -1,6 +1,11 @@
-.chart-line {
-  .series-label[layout-strategy-horizontal="left"] text { text-anchor: end; }
-  .series-label[layout-strategy-horizontal="right"] text { text-anchor: start; }
-  .series-label[layout-strategy-vertical="top"] text { dominant-baseline: auto; }
-  .series-label[layout-strategy-vertical="bottom"] text { dominant-baseline: hanging; }
+.window-rv, #tooltip-rv {
+  .chart-line {
+    .series-label[layout-strategy-horizontal="left"] text { text-anchor: end; }
+    .series-label[layout-strategy-horizontal="center"] text { text-anchor: middle; }
+    .series-label[layout-strategy-horizontal="right"] text { text-anchor: start; }
+
+    .series-label[layout-strategy-vertical="top"] text { dominant-baseline: auto; }
+    .series-label[layout-strategy-vertical="center"] text { dominant-baseline: central; }
+    .series-label[layout-strategy-vertical="bottom"] text { dominant-baseline: hanging; }
+  }
 }
